gateway/deploy/pre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-gateway-service
  namespace: ecommerce
spec:
#  externalTrafficPolicy: Local
  selector:
    app: ecommerce-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
